--- a/templates/base/navigation.html
+++ b/templates/base/navigation.html
@@ -8,12 +8,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                <li class="nav-item"><a class="nav-link" href="{% url 'AppTurismoPaquete' %}">PAQUETES TURISTICOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'AppBusquedaPeticion' %}">BUSQUEDA DE PAQUETE CONTRATADO</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'AppPaqueteContratado' %}">PAQUETES CONTRATADOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a style="color: rgb(194, 205, 42);" class="nav-link" href="{% url 'AppTurismoPaquete' %}">PAQUETES TURISTICOS</a></li>
+                <li class="nav-item"><a style="color: rgb(194, 205, 42);" class="nav-link" href="{% url 'AppBusquedaPeticion' %}">BUSQUEDA DE PAQUETE CONTRATADO</a></li>
+                <li class="nav-item"><a style="color: rgb(194, 205, 42);" class="nav-link" href="{% url 'AppPaqueteContratado' %}">PAQUETES CONTRATADOS</a></li>
+                <li class="nav-item"><a style="color: rgb(194, 205, 42);" class="nav-link" href="#about">About</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                <li class="nav-item"><a style="color: rgb(194, 205, 42);" class="nav-link" href="#contact">Contact</a></li>
                 
                 {% if user.is_authenticated %}
                     <img height="40px" src="{{ user.avatar.imagen.url }}" alt="">
